Fix spacing for footer

--- a/_sass/0000_xs/_footer_xs.scss
+++ b/_sass/0000_xs/_footer_xs.scss
@@ -16,6 +16,7 @@ footer {
   }
   .footer-title {
     @include f2-xs; 
+    padding-top: 1rem;
     margin: 0;
   }
   .footer-left {
