--- a/_sass/0992_lg/_footer_lg.scss
+++ b/_sass/0992_lg/_footer_lg.scss
@@ -4,7 +4,6 @@
 }
 
 .footer {
-  padding-bottom: 1rem;
   .footer-left {
     @include make-col(6);
   }
